chore(server): install packages relevant to testing